# Flux-Prompt-Generator

./: LICENSE  README.md  __init__.py  flux_prompt_generator.py  pyproject.toml
data/: accessories.json  age_group.json  artform.json  body_markings.json  body_types.json  ethnicity.json  expression.json  eye_colors.json  face_features.json  facial_hair.json  hair_color.json  hairstyles.json  makeup_styles.json  photo_framing.json  photo_type.json  photography_styles.json  roles.json  skin_tone.json  tattoos_scars.json
