[project]
name = "flux-prompt-generator"
description = "A flexible and customizable prompt generator for generating detailed and creative prompts for image generation models for ComfyUI"
version = "1.0.1"
license = {file = "LICENSE"}

[project.urls]
Repository = "https://github.com/fairy-root/Flux-Prompt-Generator"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "fairy-root"
DisplayName = "Flux-Prompt-Generator"
Icon = ""
